Add avr-ds18b20 library
Library is taken from https://github.com/Jacajack/avr-ds18b20

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@
 FCPU		= 16000000UL
 
 PRG			= beer_tc
-OBJS		= beer_tc.o tcontrol.o serial.o
+OBJS		= beer_tc.o tcontrol.o serial.o onewire.o ds18b20.o
 
 MCU_TARGET	= atmega328p
 
@@ -14,7 +14,7 @@ CC			= avr-gcc
 
 # Override is only needed by avr-lib build system.
 override CFLAGS		= -g -Wall $(OPTIMIZE) -mmcu=$(MCU_TARGET) $(DEFS)
-override LDFLAGS	= -Wl,-Map,$(PRG).map
+override LDFLAGS	= -lm -Wl,-Map,$(PRG).map
 
 OBJCOPY		= avr-objcopy
 
@@ -31,6 +31,12 @@ tcontrol.o: tcontrol.c
 
 serial.o: serial.c
 	$(CC) $(CFLAGS) $(LDFLAGS) -c serial.c
+
+onewire.o: onewire.c
+	$(CC) $(CFLAGS) $(LDFLAGS) -c onewire.c
+
+ds18b20.o: ds18b20.c
+	$(CC) $(CFLAGS) $(LDFLAGS) -c ds18b20.c
 
 clean:
 	rm -rf *.o $(PRG).elf $(PRG).hex *.bak 
