--- a/webapp/beermon_v2/bower.json
+++ b/webapp/beermon_v2/bower.json
@@ -2,6 +2,8 @@
   "name": "beermon-v2",
   "dependencies": {
     "ember": "~2.8.0",
-    "ember-cli-shims": "0.1.1"
+    "ember-cli-shims": "0.1.1",
+    "paho-mqtt": "*",
+    "perfect-scrollbar": "^0.6.16"
   }
 }
