--- a/webapp/beermon_v2/package.json
+++ b/webapp/beermon_v2/package.json
@@ -24,6 +24,7 @@
     "ember-cli": "2.8.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
+    "ember-cli-bootstrap-sassy": "0.5.5",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
@@ -31,14 +32,18 @@
     "ember-cli-jshint": "^1.0.0",
     "ember-cli-qunit": "^2.1.0",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-sass": "6.1.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.8.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-math-helpers": "2.0.5",
+    "ember-paho-mqtt": "0.1.2",
+    "ember-perfectscroll": "0.1.12",
     "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.1",
+    "ember-truth-helpers": "1.3.0",
     "loader.js": "^4.0.1"
   }
 }
